--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "eslint-config-airbnb": "^5.0.0",
     "extend": "^3.0.0"
   },
+  "devDependencies": {
+    "eslint": "^2.0.0"
+  },
   "homepage": "https://github.com/egy186/eslint-config-egy186#readme",
   "keywords": [
     "eslint",
@@ -23,5 +26,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/egy186/eslint-config-egy186.git"
+  },
+  "scripts": {
+    "lint": "eslint ."
   }
 }
