--- a/package.json
+++ b/package.json
@@ -13,6 +13,14 @@
   "devDependencies": {
     "eslint": "^2.0.0"
   },
+  "files": [
+    "base-v2.js",
+    "base.js",
+    "es2015-v2.js",
+    "es2015.js",
+    "index.js",
+    "v2.js"
+  ],
   "homepage": "https://github.com/egy186/eslint-config-egy186#readme",
   "keywords": [
     "eslint",
@@ -28,6 +36,7 @@
     "url": "git+https://github.com/egy186/eslint-config-egy186.git"
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "node lib/test.js"
   }
 }
