--- a/package.json
+++ b/package.json
@@ -7,19 +7,16 @@
     "url": "https://github.com/egy186/eslint-config-egy186/issues"
   },
   "dependencies": {
-    "eslint-config-airbnb": "^5.0.0",
     "extend": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^2.0.0"
   },
   "files": [
-    "base-v2.js",
     "base.js",
-    "es2015-v2.js",
     "es2015.js",
     "index.js",
-    "v2.js"
+    "node.js"
   ],
   "homepage": "https://github.com/egy186/eslint-config-egy186#readme",
   "keywords": [
