--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "eslint-config-egy186",
+  "name": "@egy186/eslint-config",
   "description": "Eslint shareable config",
   "version": "0.5.0",
   "author": "egy186",
   "bugs": {
-    "url": "https://github.com/egy186/eslint-config-egy186/issues"
+    "url": "https://github.com/egy186/eslint-config/issues"
   },
   "dependencies": {
     "extend": "^3.0.0"
@@ -18,7 +18,7 @@
     "index.js",
     "node.js"
   ],
-  "homepage": "https://github.com/egy186/eslint-config-egy186#readme",
+  "homepage": "https://github.com/egy186/eslint-config#readme",
   "keywords": [
     "eslint",
     "eslintconfig"
@@ -30,7 +30,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/egy186/eslint-config-egy186.git"
+    "url": "git+https://github.com/egy186/eslint-config.git"
   },
   "scripts": {
     "lint": "eslint .",
