--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "base.js",
     "es2015.js",
     "index.js",
-    "node.js"
+    "node.js",
+    "react.js"
   ],
   "homepage": "https://github.com/egy186/eslint-config#readme",
   "keywords": [
