--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "extend": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^3.5.0",
+    "eslint": "~3.5.0",
     "lodash.difference": "^4.5.0"
   },
   "files": [
