--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "eslint": "~3.5.0",
     "lodash.difference": "^4.5.0"
   },
+  "engines": {
+    "node": ">=4"
+  },
   "files": [
     "base.js",
     "es2015.js",
