--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "eslint": "~3.15.0",
-    "lodash.difference": "^4.5.0"
+    "lodash.difference": "^4.5.0",
+    "require-dir": "^0.3.1"
   },
   "engines": {
     "node": ">=4"
