--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/egy186/eslint-config/issues"
   },
   "dependencies": {
+    "eslint-plugin-import": "~2.2.0",
     "eslint-plugin-react": "~6.10.0",
     "extend": "^3.0.0"
   },
