--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/egy186/eslint-config/issues"
   },
   "dependencies": {
+    "eslint-plugin-import": "~2.2.0",
     "eslint-plugin-react": "~6.10.0",
     "extend": "^3.0.0"
   },
@@ -22,6 +23,7 @@
     "base.js",
     "es2015.js",
     "index.js",
+    "modules.js",
     "node.js",
     "react.js"
   ],
