--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "eslint": "~4.17.0",
+    "husky": "^0.14.3",
     "lodash.difference": "^4.5.0",
     "require-dir": "^1.0.0"
   },
@@ -45,6 +46,7 @@
   },
   "scripts": {
     "lint": "eslint .",
+    "precommit": "npm run lint && npm test",
     "test": "cd lib && node test.js"
   }
 }
