--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "eslint-plugin-import": "~2.9.0",
     "eslint-plugin-node": "~6.0.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "~7.7.0",
     "extend": "^3.0.0"
   },
   "devDependencies": {
