--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "eslint-plugin-import": "~2.9.0",
     "eslint-plugin-node": "~6.0.0",
     "eslint-plugin-react": "~7.7.0",
-    "extend": "^3.0.0"
+    "lodash": "^4.17.5"
   },
   "devDependencies": {
     "eslint": "~4.17.0",
     "husky": "^0.14.3",
-    "lodash.difference": "^4.5.0",
     "require-dir": "^1.0.0"
   },
   "engines": {
