--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,12 +9,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Lint Files
-      uses: actions/setup-node@v1
-    - name: Install Packages
-      run: npm install
-    - name: Lint Files
-      run: npm run lint
+    - uses: actions/setup-node@v1
+    - run: npm install
+    - run: npm run lint
 
   test:
     name: Test
@@ -27,10 +24,24 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Test on Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Install Packages
-      run: npm install
-    - name: Test
-      run: npm test
+    - run: npm install
+    - run: npm test
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+
+    needs: [lint, test]
+
+    steps:
+    - uses: actions/checkout@v1
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+    - run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      if: contains(github.ref, 'tags/v')
