--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-plugin-jsdoc": "~15.9.2",
     "eslint-plugin-node": "~10.0.0",
     "eslint-plugin-react": "~7.14.3",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
