--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "eslint-plugin-import": "~2.18.0",
     "eslint-plugin-jsdoc": "~18.1.4",
     "eslint-plugin-node": "~10.0.0",
-    "eslint-plugin-react": "~7.14.3",
-    "eslint-plugin-react-hooks": "^2.1.2",
+    "eslint-plugin-react": "~7.16.0",
+    "eslint-plugin-react-hooks": "~2.3.0",
     "lodash": "^4.17.15"
   },
   "devDependencies": {
