fix explicit registry

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,9 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: 12.x
-    - run: npm publish --access public --@egy186:registry=https://registry.npmjs.org/
+        registry-url: https://registry.npmjs.org/
+        scope: egy186
+    - run: npm publish --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
       if: contains(github.ref, 'tags/v')
