--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lodash": "^4.17.20"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "~4.1.1",
+    "@typescript-eslint/parser": "~4.1.1",
     "eslint": "~7.9.0",
     "eslint-plugin-import": "~2.22.0",
     "eslint-plugin-jsdoc": "~30.5.1",
@@ -17,7 +19,8 @@
     "eslint-plugin-react": "~7.20.0",
     "eslint-plugin-react-hooks": "~4.1.0",
     "husky": "^4.2.3",
-    "require-dir": "^1.2.0"
+    "require-dir": "^1.2.0",
+    "typescript": "^4.0.3"
   },
   "engines": {
     "node": ">=10"
@@ -29,7 +32,8 @@
     "jsdoc.js",
     "modules.js",
     "node.js",
-    "react.js"
+    "react.js",
+    "typescript.js"
   ],
   "homepage": "https://github.com/egy186/eslint-config#readme",
   "keywords": [
@@ -39,14 +43,23 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^7.9.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsdoc": "^30.5.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.1.0"
+    "eslint-plugin-react-hooks": "^4.1.0",
+    "typescript": "^4.0.3"
   },
   "peerDependenciesMeta": {
+    "@typescript-eslint/eslint-plugin": {
+      "optional": true
+    },
+    "@typescript-eslint/parser": {
+      "optional": true
+    },
     "eslint-plugin-import": {
       "optional": true
     },
@@ -57,6 +70,9 @@
       "optional": true
     },
     "eslint-plugin-react-hooks": {
+      "optional": true
+    },
+    "typescript": {
       "optional": true
     }
   },
