--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~4.24.0",
-    "@typescript-eslint/parser": "~4.24.0",
-    "eslint": "~7.26.0",
+    "@typescript-eslint/eslint-plugin": "~4.26.0",
+    "@typescript-eslint/parser": "~4.26.0",
+    "eslint": "~7.28.0",
     "eslint-plugin-import": "~2.23.2",
-    "eslint-plugin-jsdoc": "~34.7.0",
+    "eslint-plugin-jsdoc": "~35.1.3",
     "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-react": "~7.23.2",
+    "eslint-plugin-react": "~7.24.0",
     "eslint-plugin-react-hooks": "~4.2.0",
     "husky": "^6.0.0",
     "require-dir": "^1.2.0",
@@ -47,7 +47,7 @@
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
     "eslint-plugin-import": "^2.23.2",
-    "eslint-plugin-jsdoc": "^34.7.0",
+    "eslint-plugin-jsdoc": "^35.1.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.21.0",
     "eslint-plugin-react-hooks": "^4.1.0",
@@ -82,7 +82,7 @@
   },
   "scripts": {
     "husky": "husky install",
-    "lint": "eslint .",
+    "lint": "cd lib && eslint ..",
     "test": "cd lib && node test.js"
   }
 }
