--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x, node]
+        node-version: [12.x, 14.x, lts/*, 17.x]
 
     steps:
     - uses: actions/checkout@v2
