--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "~5.3.1",
     "eslint": "~8.2.0",
     "eslint-plugin-import": "~2.25.3",
+    "eslint-plugin-jest": "~25.2.4",
     "eslint-plugin-jsdoc": "~37.0.3",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-react": "~7.27.0",
@@ -29,6 +30,7 @@
     "base.js",
     "browser.js",
     "index.js",
+    "jest.js",
     "jsdoc.js",
     "modules.js",
     "node.js",
@@ -47,6 +49,7 @@
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^8.2.0",
     "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.2.4",
     "eslint-plugin-jsdoc": "^37.0.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-react": "^7.27.0",
