--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~5.3.1",
-    "@typescript-eslint/parser": "~5.3.1",
-    "eslint": "~8.2.0",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
     "eslint-plugin-import": "~2.25.3",
-    "eslint-plugin-jest": "~25.2.4",
-    "eslint-plugin-jsdoc": "~37.0.3",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-jsdoc": "^37.2.0",
     "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-react": "~7.27.0",
+    "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "~4.3.0",
-    "husky": "^7.0.1",
+    "husky": "^7.0.4",
     "require-dir": "^1.2.0",
-    "typescript": "^4.4.4"
+    "typescript": "^4.5.3"
   },
   "engines": {
     "node": ">=12.22.0"
