--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "eslint": "^8.4.1",
+    "eslint": "~8.5.0",
     "eslint-plugin-import": "~2.25.3",
     "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-jsdoc": "^37.2.0",
@@ -47,7 +47,7 @@
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
-    "eslint": "^8.2.0",
+    "eslint": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.2.4",
     "eslint-plugin-jsdoc": "^37.0.3",
