--- a/package.json
+++ b/package.json
@@ -10,18 +10,18 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.6.0",
-    "@typescript-eslint/parser": "^5.6.0",
+    "@typescript-eslint/eslint-plugin": "~5.8.1",
+    "@typescript-eslint/parser": "~5.8.1",
     "eslint": "~8.5.0",
     "eslint-plugin-import": "~2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
-    "eslint-plugin-jsdoc": "^37.2.0",
+    "eslint-plugin-jest": "~25.3.2",
+    "eslint-plugin-jsdoc": "~37.4.0",
     "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react": "~7.28.0",
     "eslint-plugin-react-hooks": "~4.3.0",
     "husky": "^7.0.4",
     "require-dir": "^1.2.0",
-    "typescript": "^4.5.3"
+    "typescript": "^4.5.4"
   },
   "engines": {
     "node": ">=12.22.0"
