--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~5.22.0",
-    "@typescript-eslint/parser": "~5.22.0",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
     "eslint": "~8.15.0",
     "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-jest": "~26.1.5",
@@ -21,7 +21,7 @@
     "eslint-plugin-react-hooks": "~4.5.0",
     "husky": "^8.0.1",
     "require-dir": "^1.2.0",
-    "typescript": "^4.6.4"
+    "typescript": "^4.7.2"
   },
   "engines": {
     "node": ">=14.19.1"
