--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.26.0",
-    "@typescript-eslint/parser": "^5.26.0",
-    "eslint": "~8.15.0",
+    "@typescript-eslint/eslint-plugin": "~5.26.0",
+    "@typescript-eslint/parser": "~5.26.0",
+    "eslint": "~8.16.0",
     "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-jest": "~26.1.5",
     "eslint-plugin-jsdoc": "~39.2.9",
