--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@typescript-eslint/parser": "~5.28.0",
     "eslint": "~8.18.0",
     "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-jest": "~26.4.2",
+    "eslint-plugin-jest": "^26.5.3",
     "eslint-plugin-jsdoc": "~39.3.2",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-react": "~7.30.0",
