--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "~5.47.1",
-    "@typescript-eslint/parser": "~5.47.1",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "eslint": "~8.31.0",
     "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-jest": "~27.2.0",
+    "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsdoc": "~39.6.4",
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-react": "~7.31.11",
