--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@typescript-eslint/eslint-plugin": "~5.50.0",
+    "@typescript-eslint/parser": "~5.50.0",
     "eslint": "~8.31.0",
     "eslint-plugin-import": "~2.27.4",
     "eslint-plugin-jest": "^27.2.1",
@@ -21,7 +21,7 @@
     "eslint-plugin-react-hooks": "~4.6.0",
     "husky": "^8.0.1",
     "require-dir": "^1.2.0",
-    "typescript": "^4.9.4"
+    "typescript": "~4.9.5"
   },
   "engines": {
     "node": ">=14.19.1"
@@ -45,8 +45,8 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.42.0",
-    "@typescript-eslint/parser": "^5.42.0",
+    "@typescript-eslint/eslint-plugin": "^5.50.0",
+    "@typescript-eslint/parser": "^5.50.0",
     "eslint": "^8.27.0",
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-jest": "^27.2.0",
