--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "~5.50.0",
     "@typescript-eslint/parser": "~5.50.0",
-    "eslint": "~8.31.0",
-    "eslint-plugin-import": "~2.27.4",
-    "eslint-plugin-jest": "^27.2.1",
-    "eslint-plugin-jsdoc": "~39.6.4",
+    "eslint": "~8.33.0",
+    "eslint-plugin-import": "~2.27.5",
+    "eslint-plugin-jest": "~27.2.1",
+    "eslint-plugin-jsdoc": "~39.8.0",
     "eslint-plugin-node": "~11.1.0",
-    "eslint-plugin-react": "~7.32.0",
+    "eslint-plugin-react": "~7.32.2",
     "eslint-plugin-react-hooks": "~4.6.0",
     "husky": "^8.0.1",
     "require-dir": "^1.2.0",
