--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "eslint-plugin-import": "~2.27.5",
     "eslint-plugin-jest": "~27.2.1",
     "eslint-plugin-jsdoc": "~40.1.0",
-    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-n": "~15.6.1",
     "eslint-plugin-react": "~7.32.2",
     "eslint-plugin-react-hooks": "~4.6.0",
     "husky": "^8.0.1",
@@ -51,7 +51,7 @@
     "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-jest": "^27.2.0",
     "eslint-plugin-jsdoc": "^40.0.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-n": "^15.6.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "^4.4.4"
@@ -69,7 +69,7 @@
     "eslint-plugin-jest": {
       "optional": true
     },
-    "eslint-plugin-node": {
+    "eslint-plugin-n": {
       "optional": true
     },
     "eslint-plugin-react": {
