--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "devDependencies": {
     "@eslint-stylistic/metadata": "~1.5.1",
     "@stylistic/eslint-plugin": "~1.5.1",
+    "@types/eslint": "^8.56.0",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "~6.16.0",
     "@typescript-eslint/parser": "~6.16.0",
     "eslint": "~8.56.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "~2.29.1",
     "eslint-plugin-jest": "~27.6.0",
     "eslint-plugin-jsdoc": "~46.9.1",
@@ -20,6 +22,7 @@
     "eslint-plugin-react": "~7.33.2",
     "eslint-plugin-react-hooks": "~4.6.0",
     "husky": "^8.0.1",
+    "jiti": "^1.21.0",
     "typescript": "~5.3.3"
   },
   "engines": {
@@ -89,8 +92,9 @@
     "build": "tsc --build",
     "clean": "npm run build -- --clean",
     "husky": "husky install",
-    "lint": "eslint .",
-    "test": "node test/test.js",
+    "lint": "eslint --ext .js,.ts .",
+    "prelint": "npm run build",
+    "test": "jiti test/test.ts",
     "typecheck": "tsc --project tsconfig.base.json --noEmit"
   }
 }
