--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
     "checkJs": true,
@@ -11,8 +10,8 @@
     "lib": [
       "ES2023"
     ],
-    "module": "ES2022",
-    "moduleResolution": "Bundler",
+    "module": "CommonJS",
+    "moduleResolution": "Node10",
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
@@ -26,6 +25,6 @@
   },
   "include": [
     "src/**/*",
-    "lib/**/*"
+    "test/**/*"
   ]
 }
