--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
         node-version: lts/*
     - run: npm ci
     - run: npm run lint
+    - run: npm run typecheck
 
   test:
     name: Test
@@ -30,6 +31,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+    - run: npm run build
     - run: npm test
 
   publish:
@@ -47,6 +49,8 @@ jobs:
         node-version: lts/*
         registry-url: https://registry.npmjs.org/
         scope: egy186
+    - run: npm ci
+    - run: npm run build
     - run: npm publish --provenance --access public
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
