--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@typescript-eslint/eslint-plugin": "~6.16.0",
     "@typescript-eslint/parser": "~6.16.0",
     "eslint": "~8.56.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-import-resolver-typescript": "~3.6.1",
     "eslint-plugin-jest": "~27.6.0",
     "eslint-plugin-react": "~7.33.2",
     "eslint-plugin-react-hooks": "~4.6.0",
@@ -50,6 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.50.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-jest": "^27.3.0",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.3.0",
@@ -60,6 +61,9 @@
       "optional": true
     },
     "@typescript-eslint/parser": {
+      "optional": true
+    },
+    "eslint-import-resolver-typescript": {
       "optional": true
     },
     "eslint-plugin-jest": {
