--- a/package.json
+++ b/package.json
@@ -6,19 +6,21 @@
   "bugs": {
     "url": "https://github.com/egy186/eslint-config/issues"
   },
+  "dependencies": {
+    "@stylistic/eslint-plugin": "~1.5.1",
+    "eslint-plugin-import": "~2.29.1",
+    "eslint-plugin-jsdoc": "~46.9.1",
+    "eslint-plugin-n": "~16.6.0"
+  },
   "devDependencies": {
     "@eslint-stylistic/metadata": "~1.5.1",
-    "@stylistic/eslint-plugin": "~1.5.1",
     "@types/eslint": "^8.56.0",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "~6.16.0",
     "@typescript-eslint/parser": "~6.16.0",
     "eslint": "~8.56.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "~2.29.1",
+    "eslint-import-resolver-typescript": "~3.6.1",
     "eslint-plugin-jest": "~27.6.0",
-    "eslint-plugin-jsdoc": "~46.9.1",
-    "eslint-plugin-n": "~16.6.0",
     "eslint-plugin-react": "~7.33.2",
     "eslint-plugin-react-hooks": "~4.6.0",
     "husky": "^8.0.1",
@@ -45,14 +47,11 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "@stylistic/eslint-plugin": "^1.5.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.50.0",
-    "eslint-plugin-import": "^2.27.4",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-jest": "^27.3.0",
-    "eslint-plugin-jsdoc": "^46.2.6",
-    "eslint-plugin-n": "^16.0.0",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "typescript": "^5.0.4"
@@ -64,13 +63,10 @@
     "@typescript-eslint/parser": {
       "optional": true
     },
-    "eslint-plugin-import": {
+    "eslint-import-resolver-typescript": {
       "optional": true
     },
     "eslint-plugin-jest": {
-      "optional": true
-    },
-    "eslint-plugin-n": {
       "optional": true
     },
     "eslint-plugin-react": {
