--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "dependencies": {
     "@stylistic/eslint-plugin": "~2.1.0",
     "eslint-plugin-import": "~2.29.1",
-    "eslint-plugin-jsdoc": "~48.2.1",
-    "eslint-plugin-n": "~17.2.0"
+    "eslint-plugin-jsdoc": "~48.2.7",
+    "eslint-plugin-n": "^17.8.0"
   },
   "devDependencies": {
     "@eslint-stylistic/metadata": "~2.1.0",
@@ -20,9 +20,9 @@
     "@typescript-eslint/parser": "~7.12.0",
     "eslint": "~8.57.0",
     "eslint-import-resolver-typescript": "~3.6.1",
-    "eslint-plugin-jest": "~28.2.0",
-    "eslint-plugin-react": "~7.34.1",
-    "eslint-plugin-react-hooks": "~4.6.0",
+    "eslint-plugin-jest": "~28.5.0",
+    "eslint-plugin-react": "~7.34.2",
+    "eslint-plugin-react-hooks": "~4.6.2",
     "husky": "^9.0.11",
     "jiti": "^1.21.3",
     "typescript": "~5.4.5"
