--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "@stylistic/eslint-plugin": "~2.8.0",
     "eslint-plugin-import": "~2.30.0",
     "eslint-plugin-jsdoc": "~50.2.2",
-    "eslint-plugin-n": "~17.10.2"
+    "eslint-plugin-n": "~17.10.2",
+    "globals": "^15.9.0"
   },
   "devDependencies": {
     "@eslint-stylistic/metadata": "~2.8.0",
+    "@eslint/compat": "~1.1.1",
+    "@eslint/js": "~8.57.0",
     "@types/eslint": "^8.56.12",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.16.5",
-    "@typescript-eslint/eslint-plugin": "~8.5.0",
-    "@typescript-eslint/parser": "~8.5.0",
     "eslint": "~8.57.0",
     "eslint-import-resolver-typescript": "~3.6.3",
     "eslint-plugin-jest": "~28.8.3",
@@ -25,19 +27,36 @@
     "eslint-plugin-react-hooks": "~4.6.2",
     "husky": "^9.1.5",
     "jiti": "^1.21.6",
-    "typescript": "~5.5.3"
+    "typescript": "~5.5.3",
+    "typescript-eslint": "~8.5.0"
   },
   "engines": {
     "node": ">=18.18.0"
   },
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    },
+    "./browser": {
+      "types": "./dist/browser.d.ts",
+      "default": "./dist/browser.js"
+    },
+    "./jest": {
+      "types": "./dist/jest.d.ts",
+      "default": "./dist/jest.js"
+    },
+    "./react": {
+      "types": "./dist/react.d.ts",
+      "default": "./dist/react.js"
+    },
+    "./typescript": {
+      "types": "./dist/typescript.d.ts",
+      "default": "./dist/typescript.js"
+    }
+  },
   "files": [
-    "dist",
-    "browser.js",
-    "commonjs.js",
-    "index.js",
-    "jest.js",
-    "react.js",
-    "typescript.js"
+    "dist"
   ],
   "homepage": "https://github.com/egy186/eslint-config#readme",
   "keywords": [
@@ -47,20 +66,17 @@
   "license": "MIT",
   "main": "index.js",
   "peerDependencies": {
-    "@typescript-eslint/eslint-plugin": "^8.3.0",
-    "@typescript-eslint/parser": "^8.3.0",
+    "@eslint/compat": "^1.1.1",
     "eslint": "^8.50.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-react": "^7.35.2",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "typescript-eslint": "^8.5.0"
   },
   "peerDependenciesMeta": {
-    "@typescript-eslint/eslint-plugin": {
-      "optional": true
-    },
-    "@typescript-eslint/parser": {
+    "@eslint/compat": {
       "optional": true
     },
     "eslint-import-resolver-typescript": {
@@ -77,6 +93,9 @@
     },
     "typescript": {
       "optional": true
+    },
+    "typescript-eslint": {
+      "optional": true
     }
   },
   "repository": {
@@ -86,9 +105,10 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "npm run build -- --clean",
-    "lint": "eslint --ext .js,.ts .",
+    "lint": "eslint .",
     "prepare": "husky",
     "test": "jiti test/test.ts",
     "typecheck": "tsc --project tsconfig.base.json --noEmit"
-  }
+  },
+  "type": "module"
 }
