--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,8 +10,8 @@
     "lib": [
       "ES2023"
     ],
-    "module": "CommonJS",
-    "moduleResolution": "Node10",
+    "module": "Node16",
+    "moduleResolution": "Node16",
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
