--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
       "types": "./dist/browser.d.ts",
       "default": "./dist/browser.js"
     },
+    "./commonjs": {
+      "types": "./dist/commonjs.d.ts",
+      "default": "./dist/commonjs.js"
+    },
     "./jest": {
       "types": "./dist/jest.d.ts",
       "default": "./dist/jest.js"
@@ -64,7 +68,7 @@
     "eslintconfig"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "peerDependencies": {
     "@eslint/compat": "^1.1.1",
     "eslint": "^8.50.0",
