feat!: update eslint to version 9 (#28)

--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
   },
   "devDependencies": {
     "@eslint-stylistic/metadata": "~2.9.0",
-    "@eslint/compat": "~1.1.1",
-    "@eslint/js": "~8.57.0",
-    "@types/eslint": "^8.56.12",
+    "@eslint/js": "~9.12.0",
+    "@types/eslint": "^9.6.1",
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^20.16.11",
-    "eslint": "~8.57.1",
+    "eslint": "~9.12.0",
     "eslint-import-resolver-typescript": "~3.6.3",
     "eslint-plugin-jest": "~28.8.3",
     "eslint-plugin-react": "~7.37.1",
-    "eslint-plugin-react-hooks": "~4.6.2",
+    "eslint-plugin-react-hooks": "~5.1.0-rc-459fd418-20241001",
     "husky": "^9.1.6",
     "jiti": "^2.3.3",
     "typescript": "~5.5.4",
@@ -62,12 +61,11 @@
   "license": "MIT",
   "main": "./dist/index.js",
   "peerDependencies": {
-    "@eslint/compat": "^1.1.1",
-    "eslint": "^8.50.0",
+    "eslint": "^9.11.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react-hooks": "^5.1.0-rc-459fd418-20241001",
     "typescript": "^5.0.4",
     "typescript-eslint": "^8.5.0"
   },
@@ -101,7 +99,7 @@
   "scripts": {
     "build": "tsc --build",
     "clean": "npm run build -- --clean",
-    "lint": "eslint .",
+    "lint": "eslint",
     "prepare": "husky",
     "test": "jiti test/test.ts",
     "typecheck": "tsc --project tsconfig.typecheck.json"
