--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-import-resolver-typescript": "~3.6.3",
     "eslint-plugin-jest": "~28.8.3",
     "eslint-plugin-react": "~7.37.1",
-    "eslint-plugin-react-hooks": "~5.1.0-rc-459fd418-20241001",
+    "eslint-plugin-react-hooks": "~5.0.0",
     "husky": "^9.1.6",
     "jiti": "^2.3.3",
     "typescript": "~5.5.4",
@@ -65,7 +65,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc-459fd418-20241001",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "typescript": "^5.0.4",
     "typescript-eslint": "^8.5.0"
   },
