--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@eslint-stylistic/metadata": "~2.11.0",
     "@eslint/js": "~9.15.0",
     "@types/node": "^22.9.0",
+    "@vitest/eslint-plugin": "~1.1.10",
     "eslint": "~9.15.0",
     "eslint-import-resolver-typescript": "~3.6.3",
     "eslint-plugin-jest": "~28.9.0",
@@ -59,6 +60,7 @@
   "license": "MIT",
   "main": "./dist/index.js",
   "peerDependencies": {
+    "@vitest/eslint-plugin": "^1.1.10",
     "eslint": "^9.11.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-jest": "^28.8.3",
@@ -68,6 +70,9 @@
     "typescript-eslint": "^8.15.0"
   },
   "peerDependenciesMeta": {
+    "@vitest/eslint-plugin": {
+      "optional": true
+    },
     "@eslint/compat": {
       "optional": true
     },
