fix: add vitest to exports field in package.json

--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "./typescript": {
       "types": "./dist/typescript.d.ts",
       "default": "./dist/typescript.js"
+    },
+    "./vitest": {
+      "types": "./dist/vitest.d.ts",
+      "default": "./dist/vitest.js"
     }
   },
   "files": [
