--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,14 +4,14 @@
     "allowUnusedLabels": false,
     "checkJs": true,
     "composite": true,
+    "erasableSyntaxOnly": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
     "lib": [
       "ES2023"
     ],
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "NodeNext",
     "noFallthroughCasesInSwitch": true,
     "noImplicitOverride": true,
     "noImplicitReturns": true,
@@ -23,7 +23,7 @@
     "rootDir": "src",
     "skipLibCheck": true,
     "strict": true,
-    "target": "ES2022"
+    "target": "ES2023"
   },
   "include": [
     "src/**/*"
